--- a/index.html
+++ b/index.html
@@ -631,6 +631,7 @@
                 <p><a href="https://t.me/Ivem_Em">Джамиля Мухаметшина aka Ivem</a><br>
                   Локализатор</p>
               </div>
+            </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
@@ -787,6 +788,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
