--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@
                 <p><a href="https://t.me/bimb0013">Семен Головин</a><br>
                   VA Лукаса</p>
               </div>
+            </div>
             <div class="swiper-slide" data-swiper-id="3">
               <div class="swiper-slide" data-swiper-id="3">
                 <picture><source srcset="img/zagluska.webp" type="image/webp"><img src="img/zagluska.png" class="photos" alt="фото участника команды"></picture>
@@ -788,6 +789,7 @@
   <!-- </div> -->
 
 </body>
+
 
 
 
